fixed spacing after poetic paragraph

--- a/Myriad/wwwroot/css/myriad.21.05.21.css
+++ b/Myriad/wwwroot/css/myriad.21.05.21.css
@@ -136,7 +136,7 @@ ul {margin-top:.5rem;}
 p{line-height:1.5em;padding-bottom:.5em;-webkit-margin-before:0em;-webkit-margin-after:0em;margin-top:0;margin-bottom:0;}
 .scripture-text p{line-height:1.4em;}
 .sidebarScripture p{padding-bottom:.1em;}
-.firstverse + .poetic, p.firstverse + p.firstpoetic{margin-top:.75rem;}
+.firstverse + .poetic, p.firstverse + p.firstpoetic, .poetic + .verse, .firstpoetic + .verse {margin-top:.75rem;}
 p.poetic+p.poetic, p.firstpoetic+p.poetic, .sidebarScripture p.firstpoetic{margin-top:0}
 .sidenote p{padding-bottom: .5em;}
 .sidenote details p{padding-bottom:.1em;}
